vetter-core/tests/corpus/curl/snapshots/insecure.snap
---
source: vetter-core/tests/curl_corpus.rs
expression: parsed
---
{
  "command": "curl",
  "argv": [
    "curl",
    "-k",
    "https://self-signed.example.test/"
  ],
  "effects": [
    {
      "kind": "http_request",
      "method": "GET",
      "url": "https://self-signed.example.test/",
      "headers": [],
      "body": {
        "kind": "none"
      },
      "tls": "insecure_skip_verify",
      "follow_redirects": false
    }
  ],
  "signals": [
    {
      "kind": "insecure_flag",
      "detail": "--insecure / -k present",
      "effect_idx": 0
    }
  ],
  "display_hints": {
    "primary_verb": "GET",
    "primary_target": "https://self-signed.example.test/",
    "badges": [
      {
        "label": "insecure: -k",
        "severity": "danger"
      }
    ]
  }
}
